refactor: dto 통합으로 테스트 코드 수정